fixing cutom font not showing on other devices

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 @font-face {
   font-family: 'Karim';
-  src: url('fonts\Karim-Regular.ttf');
+  src: url('https://karim-makes.vercel.app/fonts/Karim-Regular.ttf');
 }
 
 body {
